
- Issue #29028: Fixed possible use-after-free bugs in the subscription of the
  buffer object with custom index object.

- Issue #29145: Fix overflow checks in string, bytearray and unicode.
  Patch by jan matejek and Xiang Zhang.

- Issue #28932: Do not include <sys/random.h> if it does not exist.

Extension Modules
-----------------

- Issue #29169: Update zlib to 1.2.11.

Library
-------

- [Security] bpo-30730: Prevent environment variables injection in subprocess on
  Windows.  Prevent passing other environment variables and command arguments.

- [Security] bpo-30694: Upgrade expat copy from 2.2.0 to 2.2.1 to get fixes
  of multiple security vulnerabilities including: CVE-2017-9233 (External
  entity infinite loop DoS), CVE-2016-9063 (Integer overflow, re-fix),
  CVE-2016-0718 (Fix regression bugs from 2.2.0's fix to CVE-2016-0718)
  and CVE-2012-0876 (Counter hash flooding with SipHash).
  Note: the CVE-2016-5300 (Use os-specific entropy sources like getrandom)
  doesn't impact Python, since Python already gets entropy from the OS to set
  the expat secret using ``XML_SetHashSalt()``.

- [Security] bpo-30500: Fix urllib.splithost() to correctly parse
  fragments. For example, ``splithost('//127.0.0.1#@evil.com/')`` now
  correctly returns the ``127.0.0.1`` host, instead of treating ``@evil.com``
  as the host in an authentification (``login@host``).

- [Security] bpo-29591: Update expat copy from 2.1.1 to 2.2.0 to get fixes
  of CVE-2016-0718 and CVE-2016-4472. See
  https://sourceforge.net/p/expat/bugs/537/ for more information.

- bpo-28994: The traceback no longer displayed for SystemExit raised in
  a callback registered by atexit.

- bpo-30418: On Windows, subprocess.Popen.communicate() now also ignore EINVAL
  on stdin.write() if the child process is still running but closed the pipe.

- bpo-30378: Fix the problem that logging.handlers.SysLogHandler cannot
  handle IPv6 addresses.

- bpo-29960: Preserve generator state when _random.Random.setstate()